kuberesources/nginx/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: default
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
     app: nginx 
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - 'echo "
                  <html>
                  <head><title> About Me </title></head>
                  <body>
                  <h4>I am Samuel Nwoye, an AWS Certified Solutions Architect - Associate who enjoys working with awesomes technologies -
                  AWS, Terraform, Kubernetes, Ansible, Elastic Stack etc - in solving real DevOps issues.</h4>
                  </body>
                  </html>" > /usr/share/nginx/html/index.html
                  '
