kuberesources/nginx/nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: nginx-http
